--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		-->
 		</div>
 
-		
+		<div id="select-clear">
+			<button id="select-all">Select All</button>
+			<button id="clear-all">Clear All</button>
+		</div>
 
 	</div>
 </body>
